# pcsm

./: .gitignore  PCSM_figure.tif  README.md
code/10_functions/: pyproject.toml
code/10_functions/projlib/: __init__.py  aligning_gmmhmm.py  characterization_help.py  cleaning.py  cross_valdation_verification.py  cross_validation_verification.py  cv_mixture_latent_states.py  metric_calculation.py  metric_thresholding.py  plotting.py  recovery_simulation.py  simulation.py
code/10_functions/projlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code/20_scripts/: analysis_ds000030_1st-level_FIR_BOLD.py  analysis_ds000030_cv-mixtures_latent-states.py  analysis_simulation_pcsm-example.py  analysis_simulation_pcsm-recovery_gmmhmm-model_global-priors.py  analysis_simulation_pcsm-recovery_latent-states_transitions.py  analysis_simulation_pcsm-scaling-factors_bottle-load.py  analysis_simulation_pcsm-thresholds_impact-bottleneck.py  analysis_stimulation_pcsm-thresholds_metrics.py  data-dl_openneuro-ds000030.py  simulation_pcsm_ground-truth.py
code/env/: requirements.txt
