[project]
name = "projlib"
version = "0.1.0"
description = "Project-specific helper functions"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "joblib",
  "hmmlearn"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
